SAPA-47 Update tests and fix validation logic along the way

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -13,6 +13,7 @@ pytest-timeout
 opf-fido
 file-magic
 Pillow
+pymediainfo
 
 git+https://gitlab.csc.fi/dpres/xml-helpers.git@develop#egg=xml_helpers
 git+https://gitlab.csc.fi/dpres/mets.git@develop#egg=mets
