--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,20 @@ unit-test:
   except:
     - master
 
+e2e-localhost-archives:
+  stage: local-test
+  script:
+    - 'e2e-localhost-archives.sh dpres-siptools-archives'
+  except:
+    - master
+
+e2e-localhost-siptools-research:
+  stage: local-test
+  script:
+    - 'e2e-fairdata-localhost.sh dpres-research-rest-api'
+  except:
+    - master
+
 e2e-localhost-preservation:
   stage: local-test
   script:
