--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ e2e-localhost-archives:
   stage: local-test
   script:
     - 'e2e-localhost-archives.sh dpres-siptools-archives'
+  allow_failure: true
   except:
     - master
 
@@ -72,6 +73,7 @@ e2e-localhost-siptools-research:
   stage: local-test
   script:
     - 'e2e-fairdata-localhost.sh dpres-research-rest-api'
+  allow_failure: true
   except:
     - master
 
