KDKPAS-2070 Fix 'uri_to_path' behavior on Py 2 & 3
`urllib.unquote_plus` / `urllib.parse.unquote_plus` processes the same
Unicode string differently on Python 2 vs. Python 3. Encode the
Unicode string to UTF-8 bytes for uniform behavior with Python 3.

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,6 +5,7 @@ dateutils
 scandir
 pytest
 wand
+six
 python-mimeparse
 pytest-timeout
 git+https://gitlab.csc.fi/dpres/xml-helpers.git@develop#egg=xml_helpers
