KDKPAS-2268 Update Fido to the newest currently available version
As Fido version used by file-scraper changes, the version also has to be
changed here in order for the software to work together.

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -12,7 +12,7 @@ pytest-cov
 # Validator components required to run unit tests
 ffmpeg-python
 file-magic
-opf-fido
+opf-fido==1.4.0
 Pillow
 pymediainfo
 wand
