--- a/requirements_github.txt
+++ b/requirements_github.txt
@@ -7,3 +7,4 @@ git+https://github.com/Digital-Preservation-Finland/xml-helpers.git#egg=xml_help
 git+https://github.com/Digital-Preservation-Finland/mets.git#egg=mets
 git+https://github.com/Digital-Preservation-Finland/premis.git#egg=premis
 git+https://github.com/Digital-Preservation-Finland/file-scraper.git#egg=file-scraper
+git+https://github.com/Digital-Preservation-Finland/fido.git#egg=opf_fido
