--- a/requirements_github.txt
+++ b/requirements_github.txt
@@ -1,6 +1,6 @@
 lxml
 python-mimeparse
-scandir
+scandir ; python_version == '2.7'
 six
 
 git+https://github.com/Digital-Preservation-Finland/xml-helpers.git#egg=xml_helpers
