SAPA-526 Update gitlab references in requirements_dev.txt

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -17,8 +17,8 @@ pymediainfo
 wand
 
 # Required dpres-components
-git+https://gitlab.csc.fi/dpres/xml-helpers.git@develop#egg=xml_helpers
-git+https://gitlab.csc.fi/dpres/mets.git@develop#egg=mets
-git+https://gitlab.csc.fi/dpres/premis.git@develop#egg=premis
-git+https://gitlab.csc.fi/dpres/file-scraper.git@develop#egg=file-scraper
-git+https://gitlab.csc.fi/dpres/fido.git@develop#egg=opf_fido
+git+https://gitlab.ci.csc.fi/dpres/xml-helpers.git@develop#egg=xml_helpers
+git+https://gitlab.ci.csc.fi/dpres/mets.git@develop#egg=mets
+git+https://gitlab.ci.csc.fi/dpres/premis.git@develop#egg=premis
+git+https://gitlab.ci.csc.fi/dpres/file-scraper.git@develop#egg=file-scraper
+git+https://gitlab.ci.csc.fi/dpres/fido.git@develop#egg=opf_fido
