KDKPAS-2472 Add new test for control characters in a SIP

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ ehthumbs.db
 Thumbs.db
 rpmbuild
 tests/data/popen
-.venv/
-venv/
+.venv*/
+venv*/
 junit*.xml
 include/etc/xml/information-package-tools/private-catalog
