--- a/requirements_github.txt
+++ b/requirements_github.txt
@@ -6,5 +6,6 @@ six
 git+https://github.com/Digital-Preservation-Finland/xml-helpers.git#egg=xml_helpers
 git+https://github.com/Digital-Preservation-Finland/mets.git#egg=mets
 git+https://github.com/Digital-Preservation-Finland/premis.git#egg=premis
-git+https://github.com/Digital-Preservation-Finland/file-scraper.git#egg=file_scraper
+git+https://github.com/Digital-Preservation-Finland/ffmpeg-python.git#egg=ffmpeg_python
 git+https://github.com/Digital-Preservation-Finland/fido.git#egg=opf_fido
+git+https://github.com/Digital-Preservation-Finland/file-scraper.git#egg=file_scraper
