--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
 ---
 
 variables:
-  CI_PYTHON_2_VENV: "yes"
+  CI_PYTHON_3: "yes"
+  CI_EL9: "yes"
 
 include:
   - project: 'dpres/gitlab-ci-pipeline'
-    ref: master
+    ref: TPASPKT-1053
     file:
       - '/pipeline/common.yml'
       - '/pipeline/kppas.yml'
